# csound-websocket-io-plugin

./: .gitignore  .notes.md  CMakeLists.txt  vcpkg.json
CMakeCsoundPlugin/: CMakeLists.txt  config.cmake  csound-plugin.cmake  vcpkg.cmake
cmake/: csound-plugin.cmake  csound.cmake  fetch-dependency.cmake  vcpkg.cmake
cmake/Modules/: FindCSOUND.cmake
src/: _init_.c  common.c  common.h  get.c  get.h  set.c  set.h
test/: test.csd  test.html
